# enmascaramiento_celsius

./: .gitignore  main.py  pyproject.toml
enmascaramiento_celsius.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 000_enmascaramiento.ipynb  001_pruebas.ipynb
scripts/: convert_ssrd.py  mask_convert.py  mask_gpkg.py  prepare_era5.py
